correct Id3d so it doesn't use car's Identify3d

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,9 @@ S3method(Text3d,default)
 S3method(cell,default)
 S3method(cell,glh)
 S3method(center,ell)
+S3method(misscode,data.frame)
+S3method(misscode,default)
+S3method(misscode,factor)
 S3method(uv,default)
 S3method(uv,ell)
 export(Axes3d)
