--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ export(Ell3d)
 export(Ellipse3d)
 export(Evalf)
 export(Fit3d)
+export(Fit3d2)
+export(Fit3d_bak)
 export(Flag3d)
 export(Id3d)
 export(Identify3d)
