--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,4 +12,6 @@ License: GPL-2
 Depends:
     rgl
 LazyData: TRUE
-RoxygenNote: 7.2.0
+Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
