--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ S3method(misscode,default)
 S3method(misscode,factor)
 S3method(uv,default)
 S3method(uv,ell)
+export(Avp3d)
 export(Axes3d)
 export(ConjComp)
 export(E.phi)
