--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,6 @@ S3method(Lines3d,default)
 S3method(Plot3d,default)
 S3method(Plot3d,formula)
 S3method(Plot3d,lm)
-S3method(Plot3d,par)
 S3method(Points3d,default)
 S3method(Points3d,formula)
 S3method(Points3d_,default)
@@ -40,6 +39,7 @@ export(Init3d)
 export(Init3d_)
 export(Lines3d)
 export(Plot3d)
+export(Plot3d_par)
 export(Points3d)
 export(Points3d_)
 export(Pop3d)
